LIVIJUKU-679 - refactoring: numeric-integer-only direktiivin sijaan käytetään aina: integer-only direktiivia. Integer-only direktiivin kanssa input elementin tyyppi ei ole pakko olla number.

--- a/app/scripts/components/tunnusluvut/kalusto/index.html
+++ b/app/scripts/components/tunnusluvut/kalusto/index.html
@@ -23,7 +23,7 @@
             <td>{{rivi.paastoluokka}}</td>
             <td>
               <form-group-compact label="Linja-autojen lukumäärä" errormessage="kokonaislukuErrorMessage">
-                <input id="{{tyyppi + '-linjaautot-'+$index}}" name="linjaautot" type="number" numeric-integer-only=""
+                <input id="{{tyyppi + '-linjaautot-'+$index}}" name="linjaautot" type="number" integer-only
                        required
                        currency-symbol="" noenter
                        ng-readonly="isReadonly()"
