--- a/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
@@ -142,7 +142,7 @@
                 <form-group-compact label="Kuntien lukumääärä" errormessage="kokonaislukuErrorMessage">
                   <input id="taustatiedot-kuntienlkm" name="kuntienlkm"
                          placeholder="kuntien lkm" noenter
-                         type="number" numeric-integer-only="" select-on-click
+                         type="number" integer-only select-on-click
                          ng-readonly="isReadonly()"
                          ng-model="taustatiedot.kuntienlkm" required>
                 </form-group-compact>
@@ -154,7 +154,7 @@
                 <form-group-compact label="Vyöhykkeiden lukumääärä" errormessage="kokonaislukuErrorMessage">
                   <input id="taustatiedot-vyohykkeidenlkm" name="vyohykkeidenlkm"
                          placeholder="vyöhykkeiden lkm" noenter
-                         type="number" numeric-integer-only="" select-on-click
+                         type="number" integer-only select-on-click
                          ng-readonly="isReadonly()"
                          ng-model="taustatiedot.vyohykkeidenlkm" required>
                 </form-group-compact>
@@ -193,7 +193,7 @@
                 <form-group-compact label="Asukasmäärä" errormessage="kokonaislukuErrorMessage">
                   <input id="taustatiedot-asukasmaara" name="asukasmaara"
                          placeholder="lkm" noenter
-                         type="number" numeric-integer-only="" select-on-click
+                         type="number" integer-only select-on-click
                          ng-readonly="isReadonly()"
                          ng-model="taustatiedot.asukasmaara" required>
                 </form-group-compact>
@@ -205,7 +205,7 @@
                 <form-group-compact label="Työpaikkamäärä" errormessage="kokonaislukuErrorMessage">
                   <input id="taustatiedot-tyopaikkamaara" name="tyopaikkamaara"
                          placeholder="lkm" noenter
-                         type="number" numeric-integer-only="" select-on-click
+                         type="number" integer-only select-on-click
                          ng-readonly="isReadonly()"
                          ng-model="taustatiedot.tyopaikkamaara" required>
                 </form-group-compact>
@@ -217,7 +217,7 @@
                 <form-group-compact label="Pendelöivien osuus">
                   <input id="taustatiedot-pendeloivienosuus" name="pendeloivienosuus"
                          placeholder="%-osuus työssäkäyvistä" noenter
-                         type="number" min="0" max="100" numeric-integer-only="" select-on-click
+                         type="number" min="0" max="100" integer-only select-on-click
                          ng-readonly="isReadonly()"
                          ng-model="taustatiedot.pendeloivienosuus" required>
                 </form-group-compact>
@@ -268,7 +268,7 @@
                 <input id="taustatiedot-pysakkienlkm" name="pysakkienlkm"
                        class="form-control notbold"
                        placeholder="lkm" noenter
-                       type="number" numeric-integer-only="" select-on-click
+                       type="number" integer-only select-on-click
                        ng-readonly="isReadonly()"
                        ng-model="taustatiedot.pysakkienlkm" required>
               </form-group-compact>
@@ -536,7 +536,7 @@
                 <form-group-compact label="Asiakastyytyväisyys">
                   <input id="taustatiedot-asiakastyytyvaisyys" name="asiakastyytyvaisyys"
                          placeholder="Asiakastyytyväisyys (%)" noenter
-                         type="number" min="0" max="100" numeric-integer-only="" select-on-click
+                         type="number" min="0" max="100" integer-only select-on-click
                          ng-readonly="isReadonly()"
                          ng-model="taustatiedot.asiakastyytyvaisyys" required>
                 </form-group-compact>
