LIVIJUKU-679 - vuosiluku jokaisen välilehtiotsikon perään

--- a/app/scripts/views/tunnusluvut/muokkaus-psab.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psab.html
@@ -1,6 +1,6 @@
 <div class="container">
   <juku-form-row>
-    <h2>PSA bruttosopimusliikenteen tunnusluvut</h2>
+    <h2>PSA bruttosopimusliikenteen tunnusluvut {{vuosi}}</h2>
   </juku-form-row>
   <juku-form-row>
     <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
