--- a/app/scripts/views/tunnusluvut/muokkaus-psak.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psak.html
@@ -1,6 +1,6 @@
 <div class="container">
   <juku-form-row>
-    <h2>PSA käyttöoikeussopimusliikenteen tunnusluvut (KOS)</h2>
+    <h2>PSA käyttöoikeussopimusliikenteen tunnusluvut (KOS) {{vuosi}}</h2>
   </juku-form-row>
   <juku-form-row>
     <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
