--- a/app/scripts/views/tunnusluvut/muokkaus-sl.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-sl.html
@@ -1,6 +1,6 @@
 <div class="container">
   <juku-form-row>
-    <h2>Siirtymäajan liikennöintisopimuksilla liikennöitävä liikenne</h2>
+    <h2>Siirtymäajan liikennöintisopimuksilla liikennöitävä liikenne {{vuosi}}</h2>
   </juku-form-row>
   <juku-form-row>
     <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
