--- a/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
@@ -1,7 +1,7 @@
 <div class="container">
   <ng-form id="taustatiedot-form" name="taustatiedotForm" class="kysynta">
     <juku-form-row>
-      <h2>Alueen taustatiedot ja yleiset tunnusluvut</h2>
+      <h2>Alueen taustatiedot ja yleiset tunnusluvut {{vuosi}}</h2>
     </juku-form-row>
     <juku-form-row>
       <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
