--- a/app/scripts/views/tunnusluvut/muokkaus-me.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-me.html
@@ -1,6 +1,6 @@
 <div class="container">
   <juku-form-row>
-    <h2>Markkinaehtoinen liikenne</h2>
+    <h2>Markkinaehtoinen liikenne {{vuosi}}</h2>
   </juku-form-row>
   <juku-form-row>
     <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
