LIVIJUKU-680:  Oma kuvaaja tunnusluvuista -sivun demo.

--- a/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
+++ b/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
@@ -51,8 +51,9 @@
         </p>
       </div>
     </div>
-    <juku-form-row ng-show="hasKuukausitaso()">
-      <h4 class="col-md-4">Haluatko tarkastella kuukausittain?</h4>
+    <juku-form-row ng-if="hasKuukausitaso() || hasKalustoluokkaTaso()">
+      <h4 ng-show="hasKuukausitaso()" class="col-md-4">Haluatko tarkastella kuukausittain?</h4>
+      <h4 ng-show="hasKalustoluokkaTaso()" class="col-md-4">Haluatko tarkastella päästöluokittain?</h4>
       <div class="col-md-2 form-group input-lg">
         <label for="vuosi" class="sr-only">Vuosi</label>
         <select id="vuosi" ng-model="vuosi" ng-disabled="isReadonly()" ng-change="updateVuosi()"
@@ -67,16 +68,16 @@
             <h4></h4>
           </div>
           <div class="col-md-2 lataacsv">
-            <a ng-csv="exportCsvMultibar(tunnuslukugraafiKk.data())"
-               filename="tunnuslukuKKdata.csv"
+            <a ng-csv="exportCsvMultibar(tunnuslukuAligraafi.data())"
+               filename="tunnuslukudata.csv"
                csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa
               CSV
             </a>
           </div>
         </div>
         <div class="row">
-          <nvd3 options='tunnuslukugraafiKk.options' data='tunnuslukugraafiKk.data'
-                api="tunnuslukugraafiKk.api"></nvd3>
+          <nvd3 options='tunnuslukuAligraafi.options' data='tunnuslukuAligraafi.data'
+                api="tunnuslukuAligraafi.api"></nvd3>
         </div>
       </div>
     </juku-form-row>
