--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -36,6 +36,7 @@
 @import '../scripts/components/controls'
 @import '../scripts/components/navigationLinks'
 @import '../scripts/components/seuranta/liikenne'
+@import '../scripts/components/tunnusluvut'
 @import '../scripts/components/tunnusluvut/liikenteenKysyntaTarjonta'
 @import '../scripts/components/tunnusluvut/kalusto'
 @import '../scripts/components/tunnusluvut/lipputulot'
