LIVIJUKU-679 -poistettu turhat tyylitiedostot ja korjattu rikkinäisiä html-taulukoita

--- a/app/scripts/components/tunnusluvut/kalusto/index.html
+++ b/app/scripts/components/tunnusluvut/kalusto/index.html
@@ -11,7 +11,7 @@
           </tr>
         </thead>
         <tfoot ng-if="kalusto.length > 0">
-          <tr>
+          <tr class="total">
             <td>
               <span class="yhteensa">Yhteensä:</span>
             </td>
