LIVIJUKU-679 -lisätiedot-komponentin tyyli muutettu kevyemmäksi

--- a/app/scripts/components/tunnusluvut/lisatiedot/index.html
+++ b/app/scripts/components/tunnusluvut/lisatiedot/index.html
@@ -3,22 +3,9 @@
     <h3>Lisätiedot</h3>
   </juku-form-row>
   <juku-form-row>
-    <div class="table-responsive">
-      <table class="table table-hover table-condensed">
-        <thead>
-          <tr>
-            <th>Kirjoita tähän tarvittaessa tarkennuksia ja vapaita kommentteja liittyen yllä oleviin tietoihin.</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="col-md-12">
-                  <textarea id="lisatiedot" name="lisatiedot" rows="2" class="animate msd-elastic: \n;"
+    <form-group label="Kirjoita tähän tarvittaessa tarkennuksia ja vapaita kommentteja liittyen yllä oleviin tietoihin." class="col-md-8">
+      <textarea id="lisatiedot" name="lisatiedot" rows="4" class="animate msd-elastic: \n;"
                             ng-model="lisatiedot" ng-readonly="isReadonly()"></textarea>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+    </form-group>
   </juku-form-row>
 </ng-form>
