--- a/app/scripts/views/tunnusluvut/muokkaus-sl.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-sl.html
@@ -8,7 +8,8 @@
     </uib-progressbar>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="SL" tunnusluvut="tunnusluvut.liikennevuosi"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
+    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="SL"
+                                                  liikennevuosi="tunnusluvut.liikennevuosi"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-liikennointikorvaukset tyyppi="SL"></juku-tunnusluvut-liikennointikorvaukset>
