--- a/app/scripts/views/tunnusluvut/muokkaus-psab.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psab.html
@@ -9,12 +9,12 @@
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="BR"
-        tunnusluvut="tunnusluvut.liikennevuosi"
-        liikenneviikko="tunnusluvut.liikenneviikko">
+                                                  liikennevuosi="tunnusluvut.liikennevuosi"
+                                                  liikenneviikko="tunnusluvut.liikenneviikko">
     </juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-kalusto></juku-tunnusluvut-kalusto>
+    <juku-tunnusluvut-kalusto tyyppi="BR" kalusto="tunnusluvut.kalusto"></juku-tunnusluvut-kalusto>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-liikennointikorvaukset tyyppi="BR"></juku-tunnusluvut-liikennointikorvaukset>
