--- a/app/scripts/views/tunnusluvut/muokkaus-psak.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psak.html
@@ -9,12 +9,12 @@
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="KOS"
-      tunnusluvut="tunnusluvut.liikennevuosi"
-      liikenneviikko="tunnusluvut.liikenneviikko">
+                                                  liikennevuosi="tunnusluvut.liikennevuosi"
+                                                  liikenneviikko="tunnusluvut.liikenneviikko">
     </juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-kalusto></juku-tunnusluvut-kalusto>
+    <juku-tunnusluvut-kalusto tyyppi="KOS" kalusto="tunnusluvut.kalusto"></juku-tunnusluvut-kalusto>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-liikennointikorvaukset tyyppi="KOS"></juku-tunnusluvut-liikennointikorvaukset>
