--- a/app/scripts/components/tunnusluvut/kalusto/index.html
+++ b/app/scripts/components/tunnusluvut/kalusto/index.html
@@ -20,11 +20,10 @@
         </tfoot>
         <tbody>
           <tr ng-repeat="rivi in kalusto track by $index" ng-form>
-            <td>{{rivi.paastoluokkatunnus}}</td>
+            <td>{{paastoluokkaNimi(rivi.paastoluokkatunnus)}}</td>
             <td>
               <form-group-compact label="Linja-autojen lukumäärä" errormessage="kokonaislukuErrorMessage">
-                <input id="{{tyyppi + '-linjaautot-'+$index}}" name="linjaautot" type="number" integer-only
-                       required
+                <input id="{{tyyppi + '-lukumaara-'+$index}}" name="lukumaara" integer-only
                        currency-symbol="" noenter
                        ng-readonly="isReadonly()"
                        select-on-click
