--- a/app/scripts/views/tunnusluvut/muokkaus.html
+++ b/app/scripts/views/tunnusluvut/muokkaus.html
@@ -2,7 +2,7 @@
   <div class="page-header">
     <h1>Tunnuslukujen syöttäminen</h1>
   </div>
-  <form id="tunnusluvutValintaForm" name="tunnusluvutValintaForm">
+  <form id="tunnusluvutValintaForm" name="tunnusluvutValintaForm" juku-poistumisvaroitus>
     <juku-form-row>
       <div class="col-md-4 form-group input-lg" ng-show="hasOrganisaatioSelectPermission">
         <label for="organisaatio" class="sr-only">Organisaatio</label>
