--- a/app/scripts/views/tunnusluvut/muokkaus-psab.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psab.html
@@ -17,7 +17,7 @@
     <juku-tunnusluvut-kalusto tyyppi="BR" kalusto="tunnusluvut.kalusto"></juku-tunnusluvut-kalusto>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikennointikorvaukset tyyppi="BR"></juku-tunnusluvut-liikennointikorvaukset>
+    <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus" tyyppi="BR"></juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-lipputulot tyyppi="BR"></juku-tunnusluvut-lipputulot>
