--- a/app/scripts/views/tunnusluvut/muokkaus-sl.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-sl.html
@@ -12,7 +12,7 @@
                                                   liikennevuosi="tunnusluvut.liikennevuosi"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikennointikorvaukset tyyppi="SL"></juku-tunnusluvut-liikennointikorvaukset>
+    <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus" tyyppi="SL"></juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-lipputulot tyyppi="SL"></juku-tunnusluvut-lipputulot>
