--- a/app/scripts/views/tunnusluvut/muokkaus-me.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-me.html
@@ -11,7 +11,7 @@
     <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="ME" liikennevuosi="tunnusluvut.liikennevuosi"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikennointikorvaukset tyyppi="ME"></juku-tunnusluvut-liikennointikorvaukset>
+    <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus" tyyppi="ME"></juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-lisatiedot lisatiedot="taustatiedot.lisatiedot"></juku-tunnusluvut-lisatiedot>
