--- a/app/scripts/views/tunnusluvut/muokkaus-sl.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-sl.html
@@ -15,7 +15,7 @@
     <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus" tyyppi="SL"></juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-lipputulot tyyppi="SL"></juku-tunnusluvut-lipputulot>
+    <juku-tunnusluvut-lipputulot lipputulo="tunnusluvut.lipputulo" tyyppi="SL"></juku-tunnusluvut-lipputulot>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-lisatiedot lisatiedot="taustatiedot.lisatiedot"></juku-tunnusluvut-lisatiedot>
