--- a/app/scripts/views/tunnusluvut/muokkaus-psab.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psab.html
@@ -20,7 +20,7 @@
     <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus" tyyppi="BR"></juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-lipputulot tyyppi="BR"></juku-tunnusluvut-lipputulot>
+    <juku-tunnusluvut-lipputulot lipputulo="tunnusluvut.lipputulo" tyyppi="BR"></juku-tunnusluvut-lipputulot>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-tarjouskilpailut tyyppi="BR"></juku-tunnusluvut-tarjouskilpailut>
