--- a/app/scripts/views/tunnusluvut/muokkaus-psak.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psak.html
@@ -20,7 +20,7 @@
     <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus" tyyppi="KOS"></juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-lipputulot tyyppi="KOS"></juku-tunnusluvut-lipputulot>
+    <juku-tunnusluvut-lipputulot lipputulo="tunnusluvut.lipputulo" tyyppi="KOS"></juku-tunnusluvut-lipputulot>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-tarjouskilpailut tyyppi="KOS"></juku-tunnusluvut-tarjouskilpailut>
